crates/qubit-macros/tests/ui/attribute-handler-kind-multiple.stderr
error: handler kind has already been provided
 --> tests/ui/attribute-handler-kind-multiple.rs:3:18
  |
3 | #[handler(query, subscription)]
  |                  ^^^^^^^^^^^^
