crates/qubit-macros/tests/ui/attribute-handler-kind-multiple.rs
use qubit_macros::handler;

#[handler(query, subscription)]
async fn my_handler() {}

fn main() {}
